# rustcost-core

./: .gitignore  Cargo.toml  DEV.MD  README.MD
src/: app_state.rs  debug.rs  errors.rs  main.rs  routes.rs
src/api/: mod.rs
src/api/controller/: mod.rs  utils.rs
src/api/controller/info/: info_controller.rs  mod.rs
src/api/controller/llm/: mod.rs
src/api/controller/metric/: metrics_controller.rs
src/api/controller/system/: mod.rs
src/api/dto/: info_dto.rs  k8s_pod_query_request_dto.rs  mod.rs  paginated_response.rs  system_dto.rs
src/api/routes/: info_live_routes.rs  info_routes.rs  info_stored_routes.rs  llm_routes.rs  metrics_routes.rs  mod.rs  system_routes.rs
src/api/util/: json.rs  mod.rs
src/core/client/: cronjobs.rs  daemonsets.rs  deployments.rs  ingresses.rs  jobs.rs  k8s_compat.rs  kube_client.rs  kube_resources.rs  mappers.rs  mod.rs  namespaces.rs  nodes.rs  other_resources.rs  pods.rs  services.rs  statefulsets.rs  store.rs  watchers.rs
src/core/persistence/: mod.rs  storage_path.rs
src/core/persistence/info/: path.rs
src/core/persistence/metrics/: metric_fs_adapter_base_trait.rs
src/core/util/: cost_util.rs
src/domain/: mod.rs
src/domain/alert/: alert_rule_evaluator.rs  discord_webhook_sender.rs  mod.rs
src/domain/common/model/: mod.rs
src/domain/common/service/: day_granularity.rs  mod.rs
src/domain/info/dto/: info_alert_upsert_request.rs  info_k8s_node_patch_request.rs  info_llm_upsert_request.rs  mod.rs  (+1 more)
src/domain/system/: mod.rs
src/scheduler/: schedule.rs
src/scheduler/tasks/: minute.rs  mod.rs
(+150 files in other folders)
