[package]
name = "rustcost-core"
version = "1.0.0-dev.19"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros", "tokio"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15"
validator = { version = "0.20", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["sync", "macros", "rt-multi-thread", "signal"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-appender = "0.2"

reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls-native-roots"] }
anyhow = "1.0.100"
tower-http = { version = "0.6.6", features = ["cors"] }

# Kubernetes client
kube = { version = "2.0.1", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.26.0", features = ["v1_31"] }
futures = "0.3"
http = "1.1"
base64 = "0.22.1"
async-trait = "0.1.89"
thiserror = "2.0.17"

